# ComponentAnomalyAgent

./: .gitignore  AGENTS.md  AI_CONTEXT.md  EXPERIMENTS.md  README.md  REPORT.md  REPORT_WEB_SEARCH_FETCH.md  evaluation_metric_redesign_report.md  llm_client.py  pyproject.toml  qwen_eval.py  requirements.txt  schemas.py  test_searxng_jina.py
.mpl-cache/: fontlist-v390.json
agent/: __init__.py  executor.py  memory.py  openhands_runtime.py  pipeline.py  planner.py  prompts.py  reflector.py  synthesizer.py  tool_argument_repair.py  tool_registry.py
configs/: __init__.py  config.py  default.yaml  kb_diagnosis.yaml  kb_elec_1k.yaml  kb_elec_5k.yaml  kb_public_tech_clean.yaml  local.example.yaml  verification.yaml
evaluator/: __init__.py  ablation.py  baseline_compare.py  compare.py  evaluate.py  failure_analysis.py  jaccard_eval.py  llm_judge.py  report.py  rouge_eval.py  scoring_points.py  semantic_similarity.py  verify.py
lcsc-mcp-server/: README.md  install_claude.bat  install_claude.sh  install_codex.bat  install_codex.sh  install_opencode.bat  install_opencode.sh  pyproject.toml
lcsc-mcp-server-node/: README.md  install_claude.bat  install_claude.sh  install_codex.bat  install_codex.sh  install_opencode.bat  install_opencode.sh  package-lock.json  package.json
lcsc-mcp-server/lcsc_mcp/: __init__.py  client.py  server.py
scripts/: build_circuit_md_kb.py  build_dense_index.py  build_diagnosis_kb.py  build_filtered_public_kb.py  build_hackster_kb.py  build_hq_kb.py  build_improved_kb.py  compare_runs.py  dedupe_jsonl.py  download_models.py  repair_eval.py  run_baseline.py  run_eval.py  run_experiment.py  run_infer.py  select_samples.py  test_search_fetch_flow.py  trace_viewer.py  validate_data.py  verify_experiment.py
tests/: test_ablation.py  test_agentic_runtime.py  test_circuit_kb.py  test_compare.py  test_compare_runs.py  test_dedupe_jsonl.py  test_dense_retriever.py  test_evaluation_v2_metrics.py  test_evidence_tools.py  test_failure_analysis.py  test_hackster_kb.py  test_llm_client.py  test_prompts.py  test_qwen_eval_unified.py  test_sample_ids.py
tools/: __init__.py  browser.py  circuit_kb.py  content_extractor.py  crawl4ai_fetcher.py  dataset_parser.py  dense_retriever.py  evidence_tools.py  logger.py  (+10 more)
(+23 files in other folders)
