[project]
name = "component-anomaly-agent"
version = "0.1.0"
description = "Agent system for component anomaly QA, inference tracing, and evaluation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "bert-score>=0.3.13",
    "openai>=1.0.0",
    "openhands-sdk>=1.17.0",
    "openhands-tools>=1.17.0",
    "jieba>=0.42.1",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
    "tqdm>=4.66.0",
]

[tool.uv]
package = false
