[project]
name = "lcsc-mcp-server"
version = "0.1.0"
description = "MCP server for querying LCSC/JLCPCB electronic component library"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcsc_mcp"]

[project.scripts]
lcsc-mcp = "lcsc_mcp.server:main"
